--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "repobook",
   "private": true,
+  "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.49.0"
   },
   "scripts": {
+    "test": "playwright test",
     "test:ui": "playwright test",
     "test:ui:headed": "playwright test --headed",
     "test:ui:debug": "playwright test --debug"
